# voice_robot

./: README.local.md  requirements.txt
cfg/: block.txt  cmd_level.txt
install/: local_setup.sh  setup.sh
install/my_ros2_proto/share/my_ros2_proto/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_ros2_proto/share/my_ros2_proto/cmake/: export_my_ros2_proto__rosidl_generator_cExport-noconfig.cmake  export_my_ros2_proto__rosidl_generator_cppExport.cmake  export_my_ros2_proto__rosidl_generator_pyExport-noconfig.cmake  export_my_ros2_proto__rosidl_generator_pyExport.cmake  export_my_ros2_proto__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_my_ros2_proto__rosidl_typesupport_fastrtps_cExport.cmake  export_my_ros2_proto__rosidl_typesupport_fastrtps_cppExport.cmake  my_ros2_proto__rosidl_typesupport_cExport-noconfig.cmake  my_ros2_proto__rosidl_typesupport_cExport.cmake  my_ros2_proto__rosidl_typesupport_cppExport-noconfig.cmake  my_ros2_proto__rosidl_typesupport_cppExport.cmake  my_ros2_proto__rosidl_typesupport_introspection_cExport-noconfig.cmake  my_ros2_proto__rosidl_typesupport_introspection_cppExport-noconfig.cmake
my_ros2_proto/: CMakeLists.txt
src/: jointcmd_sub.py  node_proxy.py  realsense.py  test.py  voice_pub.py  voice_server.py  voice_sub.py
static/: index.html
